...
            type="com.android.currencyAPP.ui.fragments.currency_converter_fragment.CurrencyFragmentViewModel" />


    </data>

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:id="@+id/sendTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/value"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/firstCurrencyPicker"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/sendText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstCurrencyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myriad_pro"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:shadowColor="@color/colorPrimaryDark"
...
            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/divider_gradient"
                app:layout_constraintEnd_toStartOf="@+id/exchangeButton"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/sendTextInputLayout" />


            <ImageView
                android:id="@+id/spinIcon"
...
                android:textColor="@color/colorSurface"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/secondValueText"
                style="@style/TextAppearance.MaterialComponents.Headline1"
                android:layout_width="0dp"
                android:layout_height="130sp"
                android:lines="1"
                android:text="@{currencyVm.conversionResult.received > 0 ? String.format(`+%.2f`, currencyVm.conversionResult.received) : String.format(`%.2f`, currencyVm.conversionResult.received), default = `0.00`}"
                android:textColor="@color/colorSurface"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/secondCurrencyPicker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/receiveText"
                app:shadowAdapter="@{currencyVm.conversionResult.received}" />

...
                app:layout_constraintBottom_toBottomOf="@+id/countText"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="@+id/countText"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestConversionsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
