...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/firstPrice"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
...
                    android:id="@+id/exchangeIcon"
                    android:layout_width="20sp"
                    android:layout_height="20dp"
                    tools:ignore="ContentDescription"
                    android:background="@drawable/exchange_icon_balance"
                    app:layout_constraintBottom_toBottomOf="@+id/firstPrice"
                    app:layout_constraintEnd_toStartOf="@+id/secondPrice"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/firstPrice"
                    app:layout_constraintTop_toTopOf="@+id/firstPrice" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/secondPrice"
...
